--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@types/node": "^18.14.0",
+    "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "knex": "^2.4.2",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "zod": "^3.20.6"
   }
 }
