--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tsup": "^6.6.3",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5",
-    "vitest": "^0.29.2"
+    "vitest": "^0.29.2",
+    "sqlite3": "^5.1.4",
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
@@ -31,7 +32,6 @@
     "fastify": "^4.13.0",
     "knex": "^2.4.2",
     "pg": "^8.10.0",
-    "sqlite3": "^5.1.4",
     "zod": "^3.20.6"
   }
 }
