--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "tsx": "^3.12.3",
     "typescript": "^4.9.5",
     "vitest": "^0.29.2",
-    "sqlite3": "^5.1.4",
+    "sqlite3": "^5.1.4"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
